Cleanup of Events page.

--- a/events.html
+++ b/events.html
@@ -1,10 +1,110 @@
 ---
 layout: inside
 category: events
-title: Events
+title: Social Events
 ---
 
-<h3>Past Twin Creeks HOA Events</h3>
+<!--
+
+Garage Sale
+Ice Cream Social(s)
+
+-->
+
+<p>Twin Creeks is a wonderful community with many active residents.
+We are in the process of planning exciting 
+social activities throughout the year for both 
+children and adults, but we need participation. 
+If you are interested in any of the following and would like to 
+volunteer, please contact a <a href="board.html">
+Board Member</a>. The TCHOA will provide the 
+necessary funds, we need you to provide the 
+ideas and planning! Activities and current ideas include:</p>
+
+<dl class="events">
+
+	<dt>Easter Egg Hunt</dt>
+	<dd>The Easter Bunny would like to make a special 
+	trip to Twin Creeks the weekend prior to Easter 
+	to hide candy-filled eggs in the common areas.
+	Children hunt eggs for prizes and have a special 
+	visit with the Easter Bunny.</dd>
+
+	<dt>July 4th Fire Truck Parade</dt>
+	<dd>Patriotism and pride prevail at the Annual 4th 
+	of July Parade. An option to have the local 
+	Fire Department lead a parade through the 
+	streets with bells and whistles. Our residents 
+	follow with decorated bikes, scooters, motorized 
+	cars, and waving flags followed by ice cream and 
+	watermelon at the playground.</dd>
+
+	<dt>Halloween Celebration</dt>
+	<dd>A ghoulish time is had by all each Halloween 
+	for residents of all ages. From pumpkin carving 
+	and treats to costume parades through the 
+	streets of Brookstone and Fieldstone, families 
+	enjoy fun and spooky times together.</dd>
+
+	<dt>Breakfast with Santa</dt>
+	<dd>Children get a visit from Santa Clause while 
+	enjoying early morning breakfast snacks. Each 
+	child receives a wrapped gift from Santa.</dd>
+
+	<dt>Holiday Social</dt>
+	<dd>A great time for neighbors to spread holiday 
+	cheer.  A roaring fire is the backdrop to this 
+	festive occasion which includes drinks, snacks, 
+	and music.</dd>
+
+	<dt>Christmas Eve Neighborhood Luminary Display</dt>
+	<dd>A lovely display lights up the streets of 
+	Brookstone and Fieldstone at dusk each Christmas 
+	Eve. Neighbors fill white paper bags with sand 
+	and candles for a glorious glow throughout the 
+	neighborhood or simply use their own creativity 
+	in lighting their home.</dd>
+
+	<dt>Christmas Caroling</dt>
+	<dd>A fun tradition that brings neighbors together 
+	and helps get everyone in the Holiday Spirit.</dd>
+
+	<dt>Neighborhood Garage Sales</dt>
+	<dd>This is a great opportunity to turn "trash 
+	into treasures". We are currently thinking of 
+	planning a Spring and Fall Garage Sale.</dd>
+
+	<dt>Neighborhood Groups and Clubs</dt>
+	<dd>This is a great opportunity for neighbors to get 
+	together and have a fun night out. There are 
+	many fun ideas such as: euchre, bongo, book 
+	clubs, supper clubs, golf outings just to name a few.</dd>
+</dl>
+
+<p>This is just an example of some of the areas 
+we would like to concentrate on. We need your 
+ideas and participation. Send us an <a href="mailto:wyattsmt@aol.com?subject=Committees">email</a> or give us a call.  We look forward to hearing your thoughts!</p>
+
+<h3>Yard of the Month</h3>
+<p>During Spring and Summer, homeowners work hard to earn 
+this honor. Winners receive a yard sign to 
+display in their front yard. Look for our 
+newest winners coming this Spring as you drive 
+through the neighborhood!</p>
+
+<h3>We Need You!</h3>
+
+<p><img border="0" src="images/help-wanted.jpg" width="100" height="61">
+We are in need of volunteers to help with 
+various committees and neighborhood events. It's 
+a great way to get involved, improve your 
+neighborhood and meet people. If you are 
+interested in any of the events at the bottom of 
+this page, please <a title="Volunteers" href="mailto:wyattsmt@aol.com?subject=Committees">send us an email</a>.</p>
+
+
+
+<h2>Past Twin Creeks HOA Events</h2>
 
 <h4>2009 Halloween Party</h4>
 
@@ -32,19 +132,18 @@ Stargate Commander and Baby Lizard.</p>
 
 <h4>2008 Holiday Decorating Contest Winners!</h4>
 
-<p>Thank you to everyone that decorated 
-their houses this holiday season. Your houses looked great!</p>
+<p>Thank you to everyone that decorated their houses this holiday season. Your houses looked great!</p>
 
 <p>The house decorating contest winners are as follows:</p>
 <ol class="winners">
-	<li>6244 Sagewood Court
-		<small>received a $25 gift card</small>
+	<li><div><b>6244 Sagewood Court</b>
+		<small>received a $25 gift card</small></div>
 	</li>
-	<li>6390 Robinsrock Drive
-		<small>received a $15 gift card</small>
+	<li><div><b>6390 Robinsrock Drive</b>
+		<small>received a $15 gift card</small></div>
 	</li>
-	<li>5135 Brookstone Court
-		<small>received a $10 gift card</small>
+	<li><div><b>5135 Brookstone Court</b>
+		<small>received a $10 gift card</small></div>
 	</li>
 </ol>
 <p>Honorable mention was 6509 Stonecreek Court</p>
@@ -65,17 +164,19 @@ for winning the Best Costume contest.</p>
 <span style="width:0;height:75;visibility:hidden">.</span>
 -->
 
-<h4>And the Holiday 2007 Decorating Contest Winners Are&hellip;</h4>
+<h4>2007 Holiday Decorating Contest</h4>
+
+<p>And the Holiday 2007 Decorating Contest winners are&hellip;</p>
 
 <ol class="winners">
-	<li>6336 Sagewood Court
-		<small>Indianapolis Power and Light also want to thank you for your Holiday Spirit...they say a little something extra will be added to your bill next month!</small>
+	<li><div><b>6336 Sagewood Court</b>
+		<small>Indianapolis Power and Light also want to thank you for your Holiday Spirit...they say a little something extra will be added to your bill next month!</small></div>
 	</li>
-	<li>6250 Sagewood Court
-		<small>This neighbor decorated the back of their house with the &quot;JOY&quot; and &quot;NOEL&quot; lights as well as decorations in front.</small>
+	<li><div><b>6250 Sagewood Court</b>
+		<small>This neighbor decorated the back of their house with the &quot;JOY&quot; and &quot;NOEL&quot; lights as well as decorations in front.</small></div>
 	</li>
-	<li>5034 Bird Branch
-		<small>This neighbor's house welcomed you with beautiful decorations right as you came in off of 62nd onto Creeks Crossing.</small>
+	<li><div><b>5034 Bird Branch</b>
+		<small>This neighbor's house welcomed you with beautiful decorations right as you came in off of 62nd onto Creeks Crossing.</small></div>
 	</li>
 </ol>
 
@@ -90,11 +191,12 @@ for winning the Best Costume contest.</p>
 	<li>6436 Robins Rock Lane</li>
 </ul>
 
-<h4>TCHOA 2006 CHRISTMAS LIGHTING CONTEST WINNERS</h4>
+<!--
+<h4>2006 Christmas Lighting Contest</h4>
 
 <p>Congratulations to the following homeowners in winning the Christmas Lighting Contest. 
 Thank you to all who contributed in making our neighborhood such a festive place.</p>
-
+-->
 
 <!--
 <a target="_self" href="Javascript:fp_ShowImg(document['fpphoto_2569'],'400','300','7709',0);"><img hspace="10" vspace="5" border="0" src="photogallery/photo00008447/1st%20place%206250%20Sagewood%20court.JPG" id="fpphoto_2569" name="fpphoto_2569" lowsrc="1st%20place%206250%20Sagewood%20court.JPG" width="100" height="75" title="" align="absmiddle" /></a>
@@ -104,11 +206,11 @@ Thank you to all who contributed in making our neighborhood such a festive place
 <a target="_self" href="Javascript:fp_ShowImg(document['fpphoto_8792'],'400','300','7709',4);"><img hspace="10" vspace="5" border="0" src="photogallery/photo00008447/HM%20twincreeks%20dr.JPG" id="fpphoto_8792" name="fpphoto_8792" lowsrc="HM%20twincreeks%20dr.JPG" width="100" height="75" title="" align="absmiddle" /></a>
 -->
 
-
-<h3>TCHOA 2006 HALLOWEEN PICTURES</h3>
+<!--
+<h4>2006 Halloween Parade</h4>
 <p>Thank you to all the homeowners who participated in the Halloween 
 Parade. A good time was had by all!</p>
-
+-->
 
 <!--
 <a target="_self" href="Javascript:fp_ShowImg(document['fpphoto_8243'],'480','360','2570',0);"><img hspace="10" vspace="5" border="0" src="photogallery/photo00019072/images/PIC_0030.JPG" id="fpphoto_8243" name="fpphoto_8243" lowsrc="images/PIC_0030.JPG" width="100" height="75" title="" align="absmiddle" /></a>
@@ -117,141 +219,3 @@ Parade. A good time was had by all!</p>
 <a target="_self" href="Javascript:fp_ShowImg(document['fpphoto_9002'],'480','360','2570',3);"><img hspace="10" vspace="5" border="0" src="photogallery/photo00019072/images/PIC_0021.JPG" id="fpphoto_9002" name="fpphoto_9002" lowsrc="images/PIC_0021.JPG" width="100" height="75" title="" align="absmiddle" /></a>
 -->
 
-<table cellSpacing="0" cellPadding="0" width="100%" border="0">
-	<tr>
-		<td valign="top">
-		<table cellSpacing="0" cellPadding="0" width="560" bgColor="#ffffff" border="2" bordercolordark="#999999" bordercolorlight="#999999">
-			<tr>
-				<td align="left">
-				<table width="100%" border="0">
-					<tr>
-						<td align="left">
-						<h3><font face="Arial" color="#008080" size="3">
-						<b>Homeowner Directory</b></font></h3>
-						<p><font face="Arial" size="2">Our newest 
-						Homeowner Directory has been delivered.&nbsp; If you 
-						would like to have your information posted in 
-						the directory, please fill out the 
-						<a href="documents/Registration%20Form.pdf">Directory 
-						Registration Form</a>. We are also looking for 
-						residents to participate on the Directory 
-						Committee, if you are interested contact a
-						<a href="board.html">Board Member</a>.</font></p>
-						</font>
-						<p>
-						&nbsp;</p>
-						<h3><font size="3" color="#008080">We Need You!</font></h3>
-						<font face="Arial, Arial, Helvetica">
-						<p>We are in need of volunteers to help with 
-						various committees and neighborhood events. It's 
-						a great way to get involved, improve your 
-						neighborhood and meet people. If you are 
-						interested in any of the events at the bottom of 
-						this page, please click on the link below.</p>
-						<p>&nbsp;</p>
-						<p align="center">
-						<a title="Volunteers" href="mailto:wyattsmt@aol.com?subject=Committees">
-						<img border="0" src="images/help-wanted.jpg" width="100" height="61"></a></p>
-						<h3><font face="Arial" color="#008080" size="3">
-						<b>&nbsp;&nbsp;&nbsp;<br>
-						Social Events</b></font></h3>
-						<p>Twin Creeks<font face="Arial" size="2"> is a 
-						wonderful community with many active residents. 
-						We are in the process of planning exciting 
-						social activities throughout the year for both 
-						children and adults, but we need participation. 
-						If you are interested in any of the following and would like to 
-						volunteer, please contact a <a href="board.html">
-						Board Member</a>.&nbsp; The TCHOA will provide the 
-						necessary funds, we need you to provide the 
-						ideas and planning! Activities and current ideas include:</font></p>
-						<p>&nbsp;</p>
-						<p style="margin-left: 15px; margin-right: 15px"><font face="Arial" size="2"><b>Easter Egg 
-						Hunt</b><br>
-						The Easter Bunny would like to make a special 
-						trip to Twin Creeks the weekend prior to Easter 
-						to hide candy-filled eggs in the common areas.&nbsp; 
-						Children hunt eggs for prizes and have a special 
-						visit with the Easter Bunny.</font></p>
-						<p style="margin-left: 15px; margin-right: 15px">&nbsp;</p>
-						<p style="margin-left: 15px; margin-right: 15px"><font face="Arial" size="2"><b>July 4th Fire 
-						Truck Parade</b><br>
-						Patriotism and pride prevail at the Annual 4th 
-						of July Parade.&nbsp; An option to have the local 
-						Fire Department lead a parade through the 
-						streets with bells and whistles.&nbsp; Our residents 
-						follow with decorated bikes, scooters, motorized 
-						cars, and waving flags followed by ice cream and 
-						watermelon at the playground.</font></p>
-						<p style="margin-left: 15px; margin-right: 15px">&nbsp;</p>
-						<p style="margin-left: 15px; margin-right: 15px"><font face="Arial" size="2"><b>Halloween 
-						Celebration<br>
-						</b>A ghoulish time is had by all each Halloween 
-						for residents of all ages.&nbsp; From pumpkin carving 
-						and treats to costume parades through the 
-						streets of Brookstone and Fieldstone, families 
-						enjoy fun and spooky times together.</font></p>
-						<p style="margin-left: 15px; margin-right: 15px">&nbsp;</p>
-						<p style="margin-left: 15px; margin-right: 15px"><font face="Arial" size="2"><b>Breakfast with 
-						Santa<br>
-						</b>Children get a visit from Santa Clause while 
-						enjoying early morning breakfast snacks.&nbsp; Each 
-						child receives a wrapped gift from Santa.&nbsp;&nbsp;<b><br>
-						&nbsp;&nbsp; </b><br>
-						<b>Holiday Social</b><br>
-						A great time for neighbors to spread holiday 
-						cheer.&nbsp; A roaring fire is the backdrop to this 
-						festive occasion which includes drinks, snacks, 
-						and music.<br>
-						&nbsp;&nbsp;<br>
-						<b>Christmas Eve Neighborhood Luminary Display<br>
-						</b>A lovely display lights up the streets of 
-						Brookstone and Fieldstone at dusk each Christmas 
-						Eve.&nbsp; Neighbors fill white paper bags with sand 
-						and candles for a glorious glow throughout the 
-						neighborhood or simply use their own creativity 
-						in lighting their home.</font></p>
-						<p style="margin-left: 15px; margin-right: 15px">&nbsp;</p>
-						<p style="margin-left: 15px; margin-right: 15px"><b>Christmas Caroling</b></p>
-						<p style="margin-left: 15px; margin-right: 15px">
-						A fun tradition that brings neighbors together 
-						and helps get everyone in the Holiday Spirit.</p>
-						<p style="margin-left: 15px; margin-right: 15px">&nbsp;</p>
-						<p style="margin-left: 15px; margin-right: 15px"><b>Neighborhood Garage Sales</b></p>
-						<p style="margin-left: 15px; margin-right: 15px">This is a great opportunity to turn &quot;trash 
-						into treasures&quot;. We are currently thinking of 
-						planning a Spring and Fall Garage Sale.</p>
-						<p style="margin-left: 15px; margin-right: 15px">&nbsp;</p>
-						<p style="margin-left: 15px; margin-right: 15px"><font face="Arial" size="2"><b>Neighborhood 
-						Groups and Clubs</b><br>
-						This is a great opportunity for neighbors to get 
-						together and have a fun night out.&nbsp; There are 
-						many fun ideas such as..... euchre, bongo, book 
-						clubs, supper clubs, golf outings just to name a few.</font></p>
-						<p>&nbsp;</p>
-						<p><b><font color="#008080">This is just an example of some of the areas 
-						we would like to concentrate on. We need your 
-						ideas and participation. Send us an
-						</font>
-						<a href="mailto:wyattsmt@aol.com?subject=Committees">
-						<font color="#008080">email</font></a><font color="#008080"> or give us a call...we look forward to 
-						hearing your thoughts! </font></b> </p>
-						<p><font face="Arial" size="2">&nbsp;&nbsp;</font> </p>
-						<p>&nbsp;</p>
-						<p><font face="Arial" color="#008080" size="3">
-						<b>Yard of the Month<br>
-						</b></font><font face="Arial" size="2">During 
-						Spring and Summer, homeowners work hard to earn 
-						this honor.&nbsp; Winners receive a yard sign to 
-						display in their front yard.&nbsp; Look for our 
-						newest winners coming this Spring as you drive 
-						through the neighborhood!<br>
-&nbsp;</font></font></td>
-					</tr>
-				</table>
-				</td>
-			</tr>
-		</table>
-		</td>
-	</tr>
-</table>
