--- a/bylaws.html
+++ b/bylaws.html
@@ -16,7 +16,7 @@ title: Bylaws
 		<p>&nbsp;</p>
 		<p align="center"><font color="#0000FF" style="font-size: 9pt">
 		<a href="documents/tchoa-bylaws-revised.pdf">
-		<img border="0" src="PDF.jpg" width="35" height="32" align="center">TCHOA 
+		<img border="0" src="images/pdf.jpg" width="35" height="32" align="center">TCHOA 
 		BYLAWS</a></font></p>
 		<p>&nbsp;</p>
 		<p>2.&nbsp; Subsequent changes to existing By-laws will be 
