--- a/covenants.html
+++ b/covenants.html
@@ -18,7 +18,7 @@ title: Covenants
 			<p>&nbsp;</p>
 			<p align="center"><font color="#0000FF" style="font-size: 9pt">
 			<a href="Covenants.pdf">
-			<img border="0" src="PDF.jpg" width="35" height="32" align="center"><span style="text-decoration: none">
+			<img border="0" src="images/pdf.jpg" width="35" height="32" align="center"><span style="text-decoration: none">
 			</span>Covenants</a></font></p>
 			<p>&nbsp;</p>
 			<p>Subsequent changes to existing Covenants will be 
@@ -41,7 +41,7 @@ title: Covenants
 			<p>&nbsp;</p>
 			<p align="center"><font color="#0000FF" style="font-size: 9pt">
 			<a href="Covenants.pdf">
-			<img border="0" src="PDF.jpg" width="35" height="32" align="left"></a></font><span style="font-size: 9pt"><a href="Rules%20Standards%20v2008.pdf">Rules 
+			<img border="0" src="images/pdf.jpg" width="35" height="32" align="left"></a></font><span style="font-size: 9pt"><a href="Rules%20Standards%20v2008.pdf">Rules 
 			&amp; Standards</a></span></p>
 			<p>&nbsp;</p>
 			<p>&nbsp;</p>
