Adding Ice Cream Social notice.

--- a/index.html
+++ b/index.html
@@ -15,8 +15,14 @@ and suggestions.</p>
 <div class="main contain-floats">
 	<div class="homepage-column">
 		<h3>Neighborhood News</h3>
+		
+		<div class="section">
+			<div class="alert">
+				<h4>Ice Cream Social</h4>
+        
+				<p>Our annual ice cream social will be August 6th.</p>
+			</div>
 			
-		<div class="section">			
 			<h4>Important Information Concerning Neighborhood Walk-thru and Inspections</h4>
 			
 			<p>In an effort 
