--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ and suggestions.</p>
 			<div class="alert">
 				<h4>Ice Cream Social</h4>
         
-				<p>Our annual ice cream social will be August 6th.</p>
+				<p>Our annual ice cream social will be August 6th at 7PM at the basketball court.</p>
 			</div>
 			
 			<h4>Important Information Concerning Neighborhood Walk-thru and Inspections</h4>
